Fix extra padding on quick view window with right aligned sidebar

--- a/source/stylesheets/quickshop.sass
+++ b/source/stylesheets/quickshop.sass
@@ -145,3 +145,7 @@
           position: relative
           width: 20%
 
+
+@media screen and (max-width: $break-product-details)
+  .qs-product-details .product-details
+    padding-right: 0
